# localforge

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  app.js  docker-compose.yml  docker-entrypoint.sh  localforge.yaml  localforge.yaml.20260702053645.bak  pyproject.toml
.github/workflows/: ci.yml  pages.yml  static.yml
docs/: MARKETING.md  MCP_CATALOG.md  OPERATIONS.md
examples/: mcp-filesystem.yaml
harnessReviews/: 07032026_01.md  07032026_01_Suggestions.md
localforge/: __init__.py  agent.py  audit.py  cli.py  config.py  models.py  setup_wizard.py
localforge/backends/: base.py  factory.py  llamacpp.py  ollama.py
localforge/mcp/: client.py
localforge/tools/: base.py  builtin.py
scripts/: smoke.sh
site/: app.js  index.html  styles.css
tests/: test_agent_protocol.py  test_audit.py  test_backends.py  test_cli_chat.py  test_config.py  test_mcp_client.py  test_tools.py
