[project]
name = "localforge"
version = "0.1.0"
description = "Local-first autonomous build harness for downloaded models, Ollama, llama.cpp, and MCP-backed tools."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.28.0",
  "PyYAML>=6.0.0",
  "rich>=13.0.0",
  "typer>=0.12.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["localforge*"]

[project.scripts]
localforge = "localforge.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
